--- a/src/danfojs-node/package.json
+++ b/src/danfojs-node/package.json
@@ -16,6 +16,7 @@
     }
   ],
   "files": [
+    "lib/",
     "dist/"
   ],
   "dependencies": {
@@ -32,8 +33,9 @@
     "test": "nyc mocha --require ts-node/register test/**/*.test.ts",
     "test:clean": "yarn build:clean && yarn test",
     "dev": "nodemon",
-    "build": "tsc",
-    "build:clean": "rm -rf ./dist && node ./scripts/prebuild.js && tsc",
+    "build": "tsc && yarn run build:esm-bundle",
+    "build:esm-bundle": "esbuild src/index.ts --bundle --format=esm --platform=node --target=esnext --minify --legal-comments=none --outfile=lib/bundle.esm.js",
+    "build:clean": "rm -rf ./dist && rm -rf ./lib && node ./scripts/prebuild.js && yarn run build",
     "lint": "eslint ./src",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "coverage": "nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
@@ -80,6 +82,7 @@
     "coveralls": "^3.1.0",
     "dotenv": "^10.0.0",
     "dts-bundle-generator": "^5.9.0",
+    "esbuild": "^0.14.38",
     "eslint": "^7.1.0",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.7",
